--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -515,7 +515,7 @@ img {
 }
 
 .sec-pad{
-  padding: 70px 0px 70px 0px;
+  padding: 60px 0px 60px 0px;
 }
 
 .mr-0{
@@ -2128,7 +2128,7 @@ div#mCSB_1_container{
 
 .about-section{
   position: relative;
-  padding: 100px 0px;
+  padding:100px 0px 80px 0px;
 }
 
 .about-section .image-box{
@@ -2604,16 +2604,17 @@ div#mCSB_1_container{
 
 .clients-section{
   position: relative;
+  padding: 20px 0px 70px 0px;
 }
 
 .clients-section .inner-container{
   position: relative;
   display: block;
-  background: #fff;
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.10);
+  /* background: #ddd; */
+  /* box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.10); */
   border-radius: 5px;
-  padding: 43px 50px 50px 50px;
-  margin-top: -146px;
+  padding: 50px 0px 0px 0px;
+  /* margin-top: -146px; */
   z-index: 1;
 }
 
@@ -2640,11 +2641,11 @@ div#mCSB_1_container{
 .clients-section .clients-box .clients-logo{
   position: relative;
   display: block;
-  padding-top: 40px;
-  min-height: 80px;
+  /* padding-top: 40px;
+  min-height: 80px; */
 }
 
-.clients-section .clients-box .clients-logo:before{
+/* .clients-section .clients-box .clients-logo:before{
   position: absolute;
   content: '';
   background: #009846;
@@ -2654,7 +2655,7 @@ div#mCSB_1_container{
   top: -2px;
   transform: scale(0,0);
   transition: all 500ms ease;
-}
+} */
 
 .clients-section .clients-box .clients-logo:hover:before{
   transform: scale(1,1);
@@ -2663,7 +2664,7 @@ div#mCSB_1_container{
 .clients-section .clients-box .clients-logo img{
   position: relative;
   display: inline-block;
-  filter: grayscale(100%);
+  /* filter: grayscale(100%); */
   transition: all 500ms ease;
 }
 
@@ -3437,7 +3438,7 @@ div#mCSB_1_container{
   display: block;
   overflow: hidden;
   border-radius: 5px;
-  background: #009846;
+  /* background: #009846; */
 }
 
 .news-block-one .inner-box .image-box .image img{
@@ -3446,12 +3447,12 @@ div#mCSB_1_container{
   transition: all 500ms ease;
 }
 
-.news-block-one .inner-box:hover .image-box .image img{
+/* .news-block-one .inner-box:hover .image-box .image img{
   opacity: 0.2;
   transform: scale(1.05);
-}
+} */
 
-.news-block-one .inner-box .image-box .image:before{
+/* .news-block-one .inner-box .image-box .image:before{
   position: absolute;
   content: '';
   background: var(--secondary-color);
@@ -3462,7 +3463,7 @@ div#mCSB_1_container{
   opacity: 0.95;
   z-index: 1;
   transition: all 500ms ease;
-}
+} */
 
 .news-block-one .inner-box .image-box .post-date{
   position: absolute;
@@ -3585,7 +3586,7 @@ div#mCSB_1_container{
 
 .apps-section{
   position: relative;
-  padding: 120px 0px;
+  padding: 80px 0px;
 }
 
 .apps-section .image-box{
@@ -3754,7 +3755,7 @@ div#mCSB_1_container{
 .faq-section .inner-box{
   position: relative;
   display: block;
-  max-width: 770px;
+  max-width: 880px;
   margin: 0 auto;
 }
 
@@ -4544,6 +4545,7 @@ div#mCSB_1_container{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-bottom: 60px;
 }
 
 .funfact-block-one{
@@ -4559,6 +4561,7 @@ div#mCSB_1_container{
   width: 210px;
   height: 100%;
   background-repeat: no-repeat;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 1px 4px;
 }
 
 .funfact-block-one .shape .shape-2{
@@ -8348,7 +8351,7 @@ div#mCSB_1_container{
 
 .page-title{
   position: relative;
-  padding: 137px 0px 31px 0px;
+  padding: 95px 0px 95px 0px;
 }
 
 .page-title .bg-layer{
@@ -8365,7 +8368,7 @@ div#mCSB_1_container{
 .page-title .bg-layer:before{
   position: absolute;
   content: '';
-  background: #1b1e31;
+  background: #1b1e31a8;
   width: 100%;
   height: 100%;
   left: 0px;
@@ -8376,7 +8379,7 @@ div#mCSB_1_container{
 .page-title h1{
   position: relative;
   display: block;
-  font-size: 60px;
+  font-size: 44px;
   line-height: 70px;
   color: #fff;
   font-weight: 700;
@@ -8700,7 +8703,7 @@ div#mCSB_1_container{
 }
 
 .faq-section{
-  padding-bottom: 110px;
+  /* padding-bottom: 10px; */
 }
 
 .platform-style-two.alternat-2 .image-box{
@@ -10418,7 +10421,7 @@ div#mCSB_1_container{
   position: relative;
   display: block;
   text-align: center;
-  margin-bottom: 43px;
+  margin-bottom: 30px;
   border: 1px solid #c5c5c5;
 }
 
@@ -12483,39 +12486,332 @@ label.error{
 .single-item .text{
   font-size:16px ;
 }
+.funfact-section{
+  padding: 10px 0px 60px 0px;
+}
+.account-section .pattern-layer {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.news-section{
+  padding: 40px 0px 70px 0px;
+}
 
 
+/* form css */
 
+button {
+  text-decoration: none;
+  border: none;
+}
+.popup-btn{
+	position: absolute!important;
+	top: 55%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+.main-btn-rect,
+.main-btn-circle{
+	position: relative;
+	margin: 0;
+	font-family: 'Roboto', sans-serif;
+	color: #FFFFF0;
+	background-color: rgb(252, 79, 79);
+	text-transform: uppercase;
+	font-size: 25px;
+	letter-spacing: 1px;	
+	outline: none;
+	cursor: pointer;
+	z-index: 100;
+}
+.main-btn-rect {
+	padding: 10px 80px;
+	line-height: 30px;
+}
+.main-btn-rect:before, 
+.main-btn-rect:after{
+  position: absolute;
+  content: '';
+  top:0;
+  width: 0%;
+  height: 100%;
+  background-color: rgba(255, 255, 240, 0.2);
+  -webkit-transition: width 0.3s;
+  -o-transition: width 0.3s;
+  transition: width 0.3s;
+}
+.main-btn-rect:before {
+  left: 0;
+}
+.main-btn-rect:after {
+  right: 0;
+}
+.main-btn-rect:hover:before, 
+.main-btn-rect:hover:after{
+  width: 50%;
+}
+.main-btn-circle{
+	height: 40px;
+	width: 40px;
+	-webkit-border-radius: 50%;
+	border-radius: 100%;
+	line-height: 40px;
+  -webkit-transition: box-shadow 0.3s;
+  -o-transition: box-shadow 0.3s;
+  transition: box-shadow 0.3s;
+}
+.main-btn-circle:hover{   
+  -webkit-box-shadow: inset 2px 1px 0px 20px rgba(255, 255, 240, 0.2);
+  -moz-box-shadow: inset 2px 1px 0px 20px rgba(255, 255, 240, 0.2);
+  box-shadow: inset 2px 1px 0px 20px rgba(255, 255, 240, 0.2);
+}
+.popup{
+  position: fixed;
+	top: 100%;
+  width: 100%;
+  height: 100%;
+  z-index: 10001;
+}
+.popup.active{
+  top:0;
+  background-color: rgba(3, 3, 3, 0.98); 
+  transition: background-color .6s ,opacity .6s;
+}
+.popup .main-btn-rect{
+  padding: 10px 100px;
+}
+.popup .popup-content{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  max-height: 568px;
+  min-width: 320px;
+  margin-top: 150px;
+  padding: 25px;
+  background-color: #FFFFF0;
+  color: #070000;
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  -ms-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -o-transform: translateX(-50%) translateY(-50%);
+  transition: margin .6s;
+  -webkit-transition: margin .6s;
+  -moz-transition: margin .6s;
+  -o-transition: margin .6s;
+}
+.popup.active .popup-content{
+  margin-top: 0px;
+}
+.popup-content h6{
+  display: table;
+  font-size: 16px;
+  text-align: center;
+  margin: 10px auto;
+  font-family: 'Roboto',sans-serif;
+  text-transform: uppercase;
+  font-weight: 100;  
+}
+.form-group{
+	position: relative;
+	width: 90%;
+	margin: 0px auto;
+}
+form#send input, form#send textarea{
+	position: relative;
+	margin-bottom: 32px;
+  color: #070000b5;
+    font-size: 15px;
+	width: 100%;
+	height: 29px;
+	font-family: 'RobotoLight', sans-serif;
+	text-indent: 25px;
+  background-color: transparent;
+	outline: 0;
+	border: none;
+	border-bottom: 1px solid #07000091;
+	-webkit-transition: border 0.6s;
+	-o-transition: border 0.6s;
+	transition: border 0.6s;
+}
+form#send input:focus,
+form#send textarea:focus{
+	border-bottom: 1px solid rgb(63, 173, 168); 
+}
+form#send label{
+  position: absolute;
+  top: 0;
+  left: 0;
+  line-height: 28px;
+  -webkit-transition: color .5s;
+  -o-transition: color .5s;
+  transition: color .5s;
+}
+form#send input:focus + label,
+form#send textarea:focus + label{
+  color: rgb(63, 173, 168);
+}
+form#send .txt{
+	line-height: 22px;
+	left: 2px;
+}
+form#send .main-btn-rect {
+	position: relative;
+	display: block;
+	padding: 6px 50px;
+	margin: 0px auto;
+	font-size: 14px;
+}
+form#send .main-btn-rect i {
+	margin-right: 5px;
+}
+.popup .fade-out{
+  position: absolute;
+  top: -20px;
+  right: -20px;
+  text-align: center;
+  font-size: 15px;
+}
+.share-wrap{
+	position: absolute;
+  display: inline-table;
+	top: 67%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+  padding: 15px;
+  text-align: center;
+}
+.share-btn{
+  color: #FFFFF0;
+  padding: 7px 25px;
+  text-decoration: none;
+  cursor: pointer;
+  font-weight: 100;
+  font-size: 14px;
+  font-family:'Lobster', sans-serif;
+  background-color: rgba(63, 173, 168, .8);
+  text-transform: uppercase;
+  border-radius: 5px;
+  transition: background-color .5s;
+  -webkit-transition: background-color .5s;
+  -moz-transition: background-color .5s;
+  -o-transition: background-color .5s;
+}
+.share-btn:hover{
+  color: #FFFFF0;
+  text-decoration: none;
+  background-color: rgba(63, 173, 168, 1.0);
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.resp-sharing-button__link,
+.resp-sharing-button__icon {
+  display: inline-block
+}
+.resp-sharing-button__link {
+  text-decoration: none;
+  color: #fff;
+  margin: 2px;
+}
+.resp-sharing-button {
+  border-radius: 5px;
+  transition: 25ms ease-out;
+  padding: 6px 9px;
+  transition: background-color .5s;
+  -webkit-transition: background-color .5s;
+  -moz-transition: background-color .5s;
+  -o-transition: background-color .5s;
+}
+.resp-sharing-button__icon svg {
+  width: 1em;
+  height: 1em;
+  margin-right: 0.4em;
+  vertical-align: top
+}
+.resp-sharing-button--small svg {
+  margin: 0;
+  vertical-align: middle
+}
+.resp-sharing-button__icon,
+.resp-sharing-button__icon--solid,
+.resp-sharing-button__icon--solidcircle {
+  fill: #fff;
+  stroke: none
+}
+.resp-sharing-button--facebook {
+  background-color: #3b5998;
+  border-color: #3b5998;
+}
+.resp-sharing-button--facebook:hover,
+.resp-sharing-button--facebook:active {
+  background-color: #2d4373;
+  border-color: #2d4373;
+}
+.resp-sharing-button--twitter {
+  background-color: #55acee;
+  border-color: #55acee;
+}
+.resp-sharing-button--twitter:hover,
+.resp-sharing-button--twitter:active {
+  background-color: #2795e9;
+  border-color: #2795e9;
+}
+.resp-sharing-button--linkedin {
+  background-color: #0077b5;
+  border-color: #0077b5;
+}
+.resp-sharing-button--linkedin:hover,
+.resp-sharing-button--linkedin:active {
+  background-color: #046293;
+  border-color: #046293;
+}
+@media only screen and (max-width: 768px){
+  h1 {font-size: 25px;}
+  h2 {font-size: 14px;}
+  form#send .main-btn-rect {padding: 7px 60px; font-size: 14px;}
+  .popup-btn{padding: 7px 60px; font-size: 14px;}
+}
+.modal-body {
+  position: relative;
+  flex: 1 1 auto;
+  padding: 20px 60px;
+}
+.modal-body h3{
+  text-align: center;
+  font-weight: 700;
+}
+.model-div h4 {
+  font-size: 22px;
+  color: #ee4436;
+  text-align: center;
+  margin-top: 15px;
+}
+.model-div .no-div{
+  text-align: center;
+  justify-content:space-evenly;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  align-items: center;
+}
+.no-div .phn i{
+  font-size: 22px;
+  color: #3386ec;
+  padding-right: 12px;
+}
+.no-div .whats i{
+  font-size: 27px;
+  color: rgb(15, 151, 45);
+  padding-right: 12px;
+  font-weight: 800;
+}
+.no-div a{
+  color: #000;
+  line-height: 20px;
+}
