--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2072,7 +2072,7 @@ div#mCSB_1_container{
 .banner-section .highlights-box .single-item h3{
   position: relative;
   display: block;
-  font-size: 21px;
+  font-size: 19px;
   line-height: 27px;
   font-weight: 600;
   padding-right: 80px;
@@ -2551,6 +2551,7 @@ div#mCSB_1_container{
 .link-box button span{
   position: relative;
   padding-right: 27px;
+  color: #2e2e2e;
 }
 
 .link-box a span:before,
@@ -3914,7 +3915,7 @@ div#mCSB_1_container{
 
 .main-footer p,
 .main-footer a{
-  color: #d5d5d5;
+  color: #e9e9e9;
   font-family: var(--text-font);
 }
 
@@ -3997,6 +3998,7 @@ div#mCSB_1_container{
   display: block;
   margin-bottom: 10px;
   padding-left: 10px;
+  color: #e3e3e3;
 }
 
 .main-footer .assistance-widget .widget-content{
@@ -8056,11 +8058,11 @@ div#mCSB_1_container{
   position: relative;
   display: block;
   width: 100%;
-  height: 72px;
+  height: 60px;
   text-align: left;
   font-size: 17px;
   color: #a8a9b3;
-  padding: 10px 100px 10px 30px;
+  padding: 10px 100px 10px 20px;
   transition: all 500ms ease;
 }
 
@@ -8070,11 +8072,12 @@ div#mCSB_1_container{
 }
 
 .contact-section .form-group textarea{
-  height: 293px;
+  height: 130px;
   border: 1px solid #353840;
   border-radius: 5px;
   resize: none;
   padding-top: 15px;
+  margin-bottom: 20px;
 }
 
 .contact-section .check-box{
@@ -9840,6 +9843,7 @@ div#mCSB_1_container{
 .theme-btn.btn-three{
   background: #1b1d24;
   padding: 10px 20px;
+  margin-bottom: 25px;
 }
 
 .theme-btn.btn-three:hover{
@@ -10428,11 +10432,11 @@ div#mCSB_1_container{
 .team-block-one .inner-box .image-box{
   position: relative;
   display: inline-block;
-  width: 180px;
-  height: 180px;
-  background: #fff;
-  border-radius: 50%;
-  padding: 16px;
+  width: 140px;
+    height: 140px;
+    background: #fff;
+    border-radius: 50%;
+    padding: 10px;
   z-index: 1;
 }
 
@@ -10442,7 +10446,7 @@ div#mCSB_1_container{
   border-radius: 50%;
   overflow: hidden;
   background: #fff;
-  padding: 20px;
+  padding: 8px;
   border: 1px solid #009846;
   z-index: 1;
 }
@@ -10985,7 +10989,7 @@ div#mCSB_1_container{
 
 .blog-grid{
   position: relative;
-  padding: 120px 0px 118px 0px;
+  padding: 80px 0px 40px 0px;
 }
 
 .blog-grid .news-block-one .inner-box:hover .image-box .image:before{
@@ -12097,7 +12101,7 @@ div#mCSB_1_container{
   position: relative;
   display: block;
   padding: 18px 0px 18px 45px;
-  border-bottom: 1px solid #32364f;
+  border-bottom: 1px solid #6a6a6a;
 }
 
 .contact-style-two .inner-content .info-list li .icon-box{
@@ -12111,12 +12115,12 @@ div#mCSB_1_container{
 }
 
 .contact-style-two .inner-content .info-list li p{
-  color: #a8a9b3;
+  color: #d3d3d3;
 }
 
 .contact-style-two .inner-content .info-list li a{
   display: inline-block;
-  color: #a8a9b3;
+  color: #d3d3d3;
   font-family: var(--text-font);
 }
 
@@ -12176,10 +12180,11 @@ div#mCSB_1_container{
 
 .contact-section.alternat-2 .left-content{
   border-color: #e8e8e8;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 1px 4px;
 }
 
 .contact-section.alternat-2 .form-group{
-  border-color: #e8e8e8;
+  border-color: #c9c9c9;
 }
 
 .contact-section.alternat-2 .form-group input[type='text'], 
@@ -12189,7 +12194,8 @@ div#mCSB_1_container{
 }
 
 .contact-section.alternat-2 .form-group textarea{
-  border-color: #e8e8e8;
+  border-color: #c9c9c9;
+  margin-top: 20px;
 }
 
 label.error{
